<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newsFeed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/feed" />

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/search" />
    <item
        android:id="@+id/post"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addPost" />

    <item
        android:id="@+id/rewards"
        android:icon="@drawable/ic_loyalty_black_24dp"
        android:title="@string/rewards"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/fui_ic_anonymous_white_24dp"
        android:title="@string/profile" />

</menu>