<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.PlacesFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/places"
        app:titleTextColor="@color/colorPrimaryDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarPlaces">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--        <androidx.viewpager.widget.ViewPager-->
            <!--            android:id="@+id/viewPager"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="190dp"-->
            <!--            android:layout_marginBottom="8dp"/>-->

            <!--        <LinearLayout-->
            <!--            android:id="@+id/SliderDots"-->
            <!--            android:layout_below="@+id/viewPager"-->
            <!--            android:orientation="horizontal"-->
            <!--            android:gravity="center_vertical|center_horizontal"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"/>-->

            <ImageView
                android:id="@+id/placeImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/placeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eateryName"
                android:textSize="24sp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="4dp"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp">

                <RatingBar
                    android:id="@+id/placeRatingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:numStars="6" />

                <TextView
                    android:id="@+id/placeRatingCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="( rating )"
                    android:fontFamily="@font/actor"
                    android:textColor="@color/darkOrange" />

            </LinearLayout>

            <TextView
                android:id="@+id/placeCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/darkGray"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/aboutTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/darkGray"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addressTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eateryAddress"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:id="@+id/placeAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/blue"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hoursTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/openingHours"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:id="@+id/placeOpeningHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phoneTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneNumber"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:id="@+id/placePhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priceLevel"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp" />

                <RatingBar
                    android:id="@+id/placePriceLevel"
                    style="@style/customRatingBarSmall"
                    android:numStars="4"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="4dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/reviewsTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textColor="@color/lighterGray"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="4dp"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/placeReviewsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:text="TextView"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/countTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="reviews"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/writeReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:text="@string/writeReview"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/placeUsersReviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="4dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>