<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context=".FeedActivity">


    <Button
        android:id="@+id/cleanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-5dp"
        android:background="@drawable/ic_close_black_24dp"
        android:backgroundTint="@color/colorPrimary"
        android:scaleX="0.4"
        android:scaleY="0.7" />

    <TextView
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/addPost"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp" />

    <Button
        android:id="@+id/choosePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:background="@drawable/ic_photo_camera_white_24dp"
        android:backgroundTint="#796D6D6D"
        android:scaleX="0.65"
        android:scaleY="1.1" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_below="@id/post"
        android:visibility="visible">

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/layout_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" />

    <fragment
        android:id="@+id/autocomplete_fragment"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_dots"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />


    <EditText
        android:id="@+id/experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/autocomplete_fragment"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:foregroundTint="@color/colorPrimary"
        android:hint="@string/exp"
        android:inputType="none|textMultiLine|text"
        android:textSize="15sp"
        app:backgroundTint="@color/colorPrimary" />


    <com.example.hunter.MultiSelectionSpinner
        android:id="@+id/spinner"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/experience"
        android:layout_marginBottom="10dp"
        android:elevation="1dp"
        android:theme="@style/AppTheme" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <RatingBar
        android:id="@+id/priceBar"
        style="@style/customRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-15dp"
        android:numStars="4"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:stepSize="1" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/MyRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceBar"
        android:layout_centerHorizontal="true"
        android:numStars="6"
        android:scaleX="0.65"
        android:scaleY="0.65"
        android:theme="@style/MyRatingBar" />


</RelativeLayout>
</ScrollView>